# AoC

./: .gitignore  README.md  pyproject.toml
aoc/: get.py  leaderboard.py  legacy_runner.py  log.py  run.py  solution_template.py  tools.py  util.py
aoc/2018/: 1.py  2.py  9.py
aoc/2019/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  17_input.asm  17_input.py  18.py  19.py  1_input.txt  2.py  20.py  21.py  22.py  23.py  24.py  25.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  intcode.py
aoc/2020/: 10_1.py  10_2.py  11_1.py  11_2.py  12_1.py  12_2.py  13_1.py  13_2.py  14_1.py  14_2.py  15_1.py  15_2.py  16_1.py  16_2.py  17_1.py  17_2.py  18_1.py  18_2.py  19_1.py  19_2.py  1_1.py  1_2.py  20_1.py  20_2.py  21_1.py  21_2.py  22_1.py  22_2.py  23_1.py  23_2.py  24_1.py  24_2.py  25_1.py  2_1.py  2_2.py  3_1.py  3_2.py  4_1.py  4_2.py  5_1.py  (+9 more)
aoc/2021/: 10_1.py  10_2.py  11_1.py  11_2.py  12_1.py  12_2.py  13_1.py  13_2.py  14_1.py  14_2.py  15_1.py  15_2.py  16_1.py  16_2.py  17_1.py  17_2.py  18_1.py  18_2.py  19_1.py  19_2.py  1_1.py  1_2.py  20_1.py  20_2.py  21_1.py  21_2.py  22_1.py  22_2.py  23_1.py  23_2.py  24_1.py  24_2.py  24_z3.py  25_1.py  25_2.py  2_1.py  2_2.py  3_1.py  3_2.py  4_1.py  (+12 more)
aoc/2022/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.py  23.py  24.py  25.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
aoc/2023/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.py  23.py  24.py  25.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
aoc/2024/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.py  23.py  24.py  25.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
aoc/2025/: 1.py  10.py  11.py  12.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
aoc/templates/: solution_template.py
uiua/: 2018_1.ua  2018_10.ua  2018_11.ua  2018_12.ua  2018_2.ua  2018_3.ua  2018_4.ua  2018_5.ua  2018_6.ua  2018_7.ua  2018_8.ua  2018_9.ua
