[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code"
authors = ["Emil Styrke <emil.styrke@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
requests = "^2.26.0"
markdownify = "^0.10.0"
yachalk = "^0.1.5"
python-dotenv = "^0.19.2"
scikit-image = "^0.19.0"
sympy = "^1.9"
opencv-python = "^4.5.4"
click = "^8.0.3"
z3-solver = "^4.11.2.0"
tcod = "^13.2.0"
parse = "^1.19.0"
advent-of-code-ocr = "^1.0.0"
flameprof = "^0.4"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aoc_get = "aoc.get:main"
aoc_run = "aoc.run:main"
aoc_leaderboard = "aoc.leaderboard:main"