[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code"
authors = [ "Emil Styrke <emil.styrke@gmail.com>" ]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
requests = "^2.31.0"
markdownify = "^0.11.6"
yachalk = "^0.1.5"
python-dotenv = "^1.0.0"
scikit-image = "^0.22.0"
sympy = "^1.12"
opencv-python = "^4.8.1.78"
click = "^8.1.7"
z3-solver = "^4.12.2.0"
tcod = "^16.2.1"
parse = "^1.20.0"
advent-of-code-ocr = "^1.0.0"
flameprof = "^0.4"
numpy = "^1.26.2"
scipy = "^1.11.4"
matplotlib = "^3.8.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"

[build-system]
requires = [ "poetry-core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aoc_get = "aoc.get:main"
aoc_run = "aoc.run:main"
aoc_leaderboard = "aoc.leaderboard:main"

[tool.ruff]
select = [ "E", "F", "PLW" ]
ignore = [ "E741" ]
line-length = 120
